<resources>
    <string name="app_name">YourTime</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="facebook">Facebook</string>
    <string name="create_free_account">Create Free Account</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">753024334881588</string>
    <string name="fb_login_protocol_scheme">fb753024334881588</string>
    <string name="google">Google</string>
    <string name="account_name">Account name</string>
    <string name="back">back</string>
    <string name="setting">Settings</string>
    <string name="account_details">Account Details</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="background">Background</string>
    <string name="add_todo_edittext">Add a to do ...</string>
    <string name="show_completed_works">SHOW COMPLETED TO-DOS</string>
    <string name="hide_completed_works">HIDE COMPLETED TO-DOS</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="photo">Photo</string>
    <string name="change_password">Change Password</string>
    <string name="save_photo">Save Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="album_gallery">Album Gallery</string>
    <string name="view_photo">View Photo</string>
    <string name="cancle">Cancle</string>
    <string name="enter_name">Enter Name</string>
    <string name="ok">OK</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_email">New Email</string>

    <string name="add_a_comment">Add a comment . . .</string>
    <string name="assign_to">Assign to</string>
    <string name="set_date_reminder_start"><![CDATA[Set Date & Reminder Start]]></string>
    <string name="set_date_reminder_end"><![CDATA[Set Date & Reminder End]]></string>
    <string name="add_a_note">Add a note . . .</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="create_list">Create list</string>
    <string name="list_name">List name</string>
    <string name="pedding">PENDING</string>
    <string name="invite_people">Invite People</string>
    <string name="just_now">Just Now</string>
    <string name="add_a_todo_in">Add a to-do in "Inbox"</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="inbox">Inbox</string>
    <string name="assigned_to_me">Assigned to me</string>
    <string name="starred">Starred</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="groupwork_today_empty">Congrats! You have nothing due or overdue for today</string>
    <string name="groupwork_assigned_empty">There is nothing assigned to you</string>
    <string name="groupwork_starred_empty">You have no starred to-dos</string>
    <string name="groupwork_week_empty">On vacation? You have nothing to do for the next 7 days</string>
    <string name="groupwork_all_empty">You have not added any to-dos yet. Go and add somthing bro.</string>
    <string name="groupwork_completed_empty">You have not completed and to-dos yet. Go and check some to-dos on your lists.</string>
    <string name="choose_your_lists">Choose Your Lists</string>
    <string name="what_would_you_like">What would you like to use YourTime for? Here\'s a selection for you to get started</string>
    <string name="travel">Travel</string>
    <string name="work">Work</string>
    <string name="family">Family</string>
    <string name="private_w">Private</string>
    <string name="continue_w">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="use_email_and_password">Use email and password...</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="passwword">Passwword</string>
    <string name="fail_connect">It look like you are not connect to the internet. Please check your connection, and try again</string>
    <string name="save">Save</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="calendar">Calendar</string>
    <string name="today_in">TODAY</string>
    <string name="day_view">DAY VIEW</string>
    <string name="remind_me">Remind me</string>
    <string name="repeat_every">Repeat every ...</string>
    <string name="remove">Remove</string>
    <string-array name="type_repeat">
        <item>Never repeat</item>
        <item>Every 1 days</item>
        <item>Every 1 weeks</item>
        <item>Every 1 months</item>
        <item>Every 1 years</item>
    </string-array>
    <string name="sort_by_priority">Sort by Priority</string>
    <string name="sort_by_apha">Sort by Apha</string>
</resources>
