<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background6">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="150dp"
        android:radius="4dp"
        android:background="@drawable/linearlayout_trans_shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize_header_20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/use_email_and_password"
                android:textColor="@color/lowBlack"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/border_white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_item_list_15dp"
                android:textColorHint="@color/colorEditText"
                android:textSize="@dimen/dimen_editt_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/lowBlack" />

            <EditText
                android:id="@+id/edit_sign_in_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_item_list_15dp"
                android:textColorHint="@color/colorEditText"
                android:textSize="@dimen/dimen_editt_15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_sign_in_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_blue_shadow"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>