<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ln_tab_account"
    android:background="@color/colorWhite">
    <LinearLayout
        android:id="@+id/ln_account_details"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_item_list_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_perm_identity_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorEditText"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_item_list_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications_none_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorEditText"/>
    <LinearLayout
        android:id="@+id/ln_sign_out"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_item_list_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_power_settings_new_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_16sp"/>
    </LinearLayout>

</LinearLayout>