<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/account_details"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:gravity="center_vertical"
            android:textSize="@dimen/txt_toolbar_18sp"/>
        <TextView
            android:id="@+id/txt_details_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_toolbar_18sp"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/ln_take_photo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_item_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp"/>
        <TextView
            android:layout_weight="20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_16sp"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgv_ava_details"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:src="@drawable/null_avatar"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorEditText"/>
    <LinearLayout
        android:id="@+id/ln_change_name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_item_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_perm_identity_black_24dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_name"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize_16sp"/>
            <TextView
                android:id="@+id/txt_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ltthao"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorEditText"/>
    <LinearLayout
        android:id="@+id/ln_change_email"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/margin_item_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_mail_outline_black_24dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_email"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize_16sp"/>
            <TextView
                android:id="@+id/txt_details_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ltthao8996@gmail.com"
                android:textColor="@color/blue"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorEditText"/>
    <LinearLayout
        android:id="@+id/ln_change_pass"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/margin_item_15dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_lock_outline_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_item_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/txtsize_16sp"/>
    </LinearLayout>
</LinearLayout>