<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background6">
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="150dp"
        android:radius="4dp"
        android:background="@drawable/linearlayout_trans_shadow">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:padding="@dimen/padding_5dp">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/choose_your_lists"
               android:textColor="@color/black"
               android:textSize="@dimen/txtsize_header_20sp"
               android:gravity="center"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/what_would_you_like"
               android:gravity="center"/>
       </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/linearlayout_shadow"
            android:padding="@dimen/padding_5dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_item_list_10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_dehaze_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/travel"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_5dp"/>
                <CheckBox
                    android:id="@+id/checkb_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/bg_checkbox"
                    android:textColor="@color/colorWhite"
                    android:checked="false"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorEditText"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_item_list_10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_dehaze_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/work"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_5dp"/>
                <CheckBox
                    android:id="@+id/checkb_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/bg_checkbox"
                    android:textColor="@color/colorWhite"
                    android:checked="false"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorEditText"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_item_list_10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_dehaze_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/family"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_5dp"/>
                <CheckBox
                    android:id="@+id/checkb_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/bg_checkbox"
                    android:textColor="@color/colorWhite"
                    android:checked="false"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorEditText"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_item_list_10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_dehaze_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/private_w"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/padding_5dp"/>
                <CheckBox
                    android:id="@+id/checkb_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/bg_checkbox"
                    android:textColor="@color/colorWhite"
                    android:checked="false"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/btn_choose_list_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_w"
                android:textAllCaps="false"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_blue_shadow"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>