<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:hint="@string/add_a_todo_in"
        android:gravity="top"
        android:id="@+id/etxt_name_work"
        android:textColorHint="@color/colorGray500"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:backgroundTint="@android:color/transparent"
        >
    </EditText>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_groupwork_50dp"
        android:id="@+id/lnl_bottomsheet_choooselist"
        android:background="@drawable/border_top_gray">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_inbox_blue"
            android:layout_margin="10dp"
            android:id="@+id/img_bottomsheet_imggroup"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/img_bottomsheet_imggroup"
            android:text="Inbox"
            android:id="@+id/txt_bottomsheet_namegroup"
            android:gravity="center_vertical"
            android:textSize="@dimen/dimen_18sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_down"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_groupwork_50dp"
        android:background="@color/colorGray100">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_setdate"
            android:id="@+id/img_bottomsheet_reminder_start"
            android:layout_marginStart="10dp"
            android:padding="15dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_reminder_end_off"
            android:layout_toEndOf="@+id/img_bottomsheet_reminder_start"
            android:id="@+id/img_bottomsheet_reminder_end"
            android:padding="13dp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_priority_off"
            android:layout_toEndOf="@+id/img_bottomsheet_reminder_end"
            android:id="@+id/img_bottomsheet_setpriority"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:id="@+id/txt_bottomsheet_add"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:id="@+id/txt_bottomsheet_cancel"
            android:gravity="center_vertical"
            android:layout_toStartOf="@id/txt_bottomsheet_add"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16sp"/>
    </RelativeLayout>
</LinearLayout>